--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -260,7 +260,7 @@ h1.sitename {
   text-align: center;
 
 /* Sharper glow effect */
-  *text-shadow:
+  text-shadow:
     0 0 2px #39ff14,
     0 0 4px #39ff14,
     0 0 8px #39ff14,
