--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -670,7 +670,7 @@ h1.sitename {
   color: #39ff14; 
 }
 
-.testimonials .testimonial-item swiper-slide {
+#swiper-wrapper swiper-slide {
   color: #90ee90;
 }
 
